fixed text alignment on projects page (and switched flipper photo).

--- a/assets/css/scenic.css
+++ b/assets/css/scenic.css
@@ -265,7 +265,7 @@ html, body {
 
 #projectPanel {
 	width: 70%;
-	margin-left: auto;
+	margin-left: auto;t
 	margin-right: auto;
 	display: block;
 }
@@ -303,4 +303,10 @@ html, body {
 	margin-right: auto;
 	border-radius: 6px;
 	box-shadow: 0 0 2px 2px rgba(16, 16, 16, 0.7);
+}
+
+.projectText {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 }
